adjusts new user form to get correct user details based on serialized info, formatting to show matches and not cut off bio

--- a/src/styling/Profile.css
+++ b/src/styling/Profile.css
@@ -196,7 +196,7 @@
   font-family: "Avenir Next Condensed";
   font-color: #f4faf9;
   font-size: 18px;
-  width: 70%;
+  width: 35%;
   position: relative;
   display: block;
   margin-left: auto;
